schema/testdata/errors/operation_where_expression_unresolvable_lhs.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        get getProfile(username) {
            //expect-error:20:51:AttributeExpressionError:field 'identit' does not exist
            @where(profile.identit == ctx.identity)
        }
    }
}
